@@ -1,4 +1,7 @@
-$Id: ChangeLog,v 1.19 2007-12-21 08:23:19 karl Exp $
+$Id: ChangeLog,v 1.20 2008-05-15 19:36:35 karl Exp $
+
+2008-04-15 karl
+    * Add ::bsd::abort command to invoke the abort() system call.
 
 2007-12-21 karl
     * Fold helper procs from tclbsd.tcl into bsd_procs.tcl.
